# ais-dev2il-ais-power-smoothie-maker

./: Dockerfile  Dockerfile_Clean  Dockerfile_Helloworld  README.md  pyproject.toml  report.html  test_main.py
.github/: test_main.py
.github/workflows/: ci.yml
